[gd_scene load_steps=6 format=3 uid="uid://cha06ymdrtac7"]

[ext_resource type="Script" uid="uid://c680t0d8nounl" path="res://scenes/inventory_slot.gd" id="1_bxqf6"]
[ext_resource type="FontFile" uid="uid://drpxclfw0kcnk" path="res://misc/m5x7.ttf" id="1_dxvxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehbky"]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dxvxp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxqf6"]
bg_color = Color(0, 0, 0, 0.7058824)

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1856.0
offset_bottom = -1016.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxqf6")

[node name="Border" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ehbky")

[node name="ItemIcon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(32, 32)

[node name="ItemQuantity" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_dxvxp")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2

[node name="ItemButton" type="Button" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_dxvxp")
theme_override_styles/hover = SubResource("StyleBoxFlat_bxqf6")

[node name="Details" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -80.0
offset_right = 150.0
color = Color(0, 0, 0, 0.7058824)

[node name="ItemName" type="Label" parent="Details"]
layout_mode = 0
offset_left = 5.0
offset_right = 150.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_dxvxp")
text = "Item Name"

[node name="ItemType" type="Label" parent="Details"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 150.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_dxvxp")
text = "Type"

[node name="ItemEffect" type="Label" parent="Details"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -23.0
offset_right = 150.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_dxvxp")
text = "Effect"

[node name="Usage" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -80.0
offset_right = 150.0
color = Color(0, 0, 0, 0.7058824)

[node name="UseButton" type="Button" parent="Usage"]
layout_mode = 1
offset_right = 150.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("1_dxvxp")
text = "Use"

[node name="DropButton" type="Button" parent="Usage"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 150.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_dxvxp")
text = "Drop"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="Usage/DropButton" to="." method="_on_drop_button_pressed"]
